apps/media/lidarr/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: lidarr-gateway
  namespace: media
spec:
  gatewayClassName: cilium
  listeners:
    - name: https
      protocol: HTTPS
      port: 443
      hostname: lidarr.corruptmane.xyz
      tls:
        mode: Terminate
        certificateRefs:
          - name: lidarr-tls
