apps/media/lidarr/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: lidarr
  namespace: media
spec:
  parentRefs:
    - name: lidarr-gateway
  hostnames:
    - lidarr.corruptmane.xyz
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: lidarr
          port: 8686
